[sass] fix => navbar on mobile

--- a/public/sass/import/_mobile.scss
+++ b/public/sass/import/_mobile.scss
@@ -1528,11 +1528,10 @@ table .rightText{
 				top:3px;
 			}
 			a{
-				padding-left: 50px;
 				color: #FFFFFF;
 				position: fixed;
-				left: -15px;
-				right: 15px;
+				left: 50px;
+				right: 50px;
 				text-align: center;
 			}
 		}
